feat: SOs can call get view a DAR by reference id